--- a/index.html
+++ b/index.html
@@ -26,5 +26,6 @@
         </div>
 
         <script type = "module" src="app.js"></script>
+        <script src ="//unpkg.com/navigo@6"></script>
     </body>
 </html>
